@@ -1,17 +1,18 @@
 package mate.academy.spring.controller;
 
 import java.util.List;
+import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 import mate.academy.spring.dto.response.OrderResponseDto;
 import mate.academy.spring.model.Order;
-import mate.academy.spring.model.ShoppingCart;
 import mate.academy.spring.service.OrderService;
 import mate.academy.spring.service.ShoppingCartService;
 import mate.academy.spring.service.UserService;
 import mate.academy.spring.service.mapper.ResponseDtoMapper;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
@@ -33,16 +34,24 @@ public class OrderController {
     }
 
     @PostMapping("/complete")
-    public OrderResponseDto completeOrder(@RequestParam Long userId) {
-        ShoppingCart cart = shoppingCartService.getByUser(userService.get(userId));
-        return orderResponseDtoMapper.mapToDto(orderService.completeOrder(cart));
+    public OrderResponseDto completeOrder(Authentication authUser) {
+        return orderResponseDtoMapper.mapToDto(orderService
+                .completeOrder(shoppingCartService
+                        .getByUser(userService.findByEmail(authUser.getName()).orElseThrow(
+                                () -> new NoSuchElementException("Can't complete order by email "
+                                        + authUser.getName())
+                        ))));
     }
 
     @GetMapping
-    public List<OrderResponseDto> getOrderHistory(@RequestParam Long userId) {
-        return orderService.getOrdersHistory(userService.get(userId))
+    public List<OrderResponseDto> getOrderHistory(Authentication authUser) {
+        return orderService.getOrdersHistory(userService.findByEmail(authUser.getName())
+                        .orElseThrow(() ->
+                                new NoSuchElementException("Can't find order history by email: "
+                                        + authUser.getName())
+                        ))
                 .stream()
                 .map(orderResponseDtoMapper::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
